# arboratorgrew_server

./: .gitignore  Dockerfile  README.md  arboratorgrew_server.opam  config_dev.json  config_docker.json  config_local.json  config_preprod.json  config_prod.json  dream_config.json  dune-project  test.py
src/: ags_cluster_output.ml  ags_main.ml  ags_project.ml  ags_sample.ml  ags_sentence.ml  dream_utils.ml  dune  main.ml  routes.ml  services.ml  template.ml  utils.ml
static/: a.html
test/: .gitignore  Makefile  get_projects.py  gs_utils.py  test.py
test/01_big_request/: 0_clean.py  1_run.py  Makefile  big.json
test/02_config/: 0_clean.py  1_init.py  2_change_config.py  Makefile  config1.json  config2.json  zaar.conllu
test/03_lexicon/: 0_clean.py  1_init.py  2_get_lexicon.py  Makefile  test_lexicon.conllu
test/04_multi_user/: 0_clean.py  1_init.py  2_search.py  3_search.py  4_get_samples.py  Makefile  fr_gsd-ud-test_00006.conllu_alice  fr_gsd-ud-test_00006.conllu_bob  fr_gsd-ud-test_00006.conllu_charlie
test/05_rewrite/: 0_clean.py  1_init.py  2_get_sample.py  3_try_package.py  4_apply_package.py  Makefile  gsd_ud_dev_10.conllu  gsd_ud_test_10.conllu
test/06_saveGraph/: 0_clean.py  1_upload_gsd.py  2_save_graph.py  Makefile  README.md
test/07_saveGraphs/: 0_clean.py  1_upload_gsd.py  2_save_graphs.py  Makefile
test/08_eraseGraphs/: 0_clean.py  1_save_graphs.py  2_erase.py  Makefile
test/09_searchRequestInGraphs/: 0_clean.py  1_run.py  Makefile
test/10_split_sentence/: 00002_split.conllu  0_clean.py  1_init.py  2_insert.py  Makefile  (+1 more)
(+2 files in other folders)
